# swagger-output.json
@@ -985,6 +985,16 @@
         "description": "Recebe uma imagem via multipart/form-data e atualiza o campo imageUrl do usuário no banco.",
         "parameters": [
           {
+            "name": "authorization",
+            "in": "header",
+            "required": true,
+            "description": "Token JWT do usuário — formato: Bearer <token>",
+            "example": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
             "name": "profilePhoto",
             "in": "formData",
             "required": true,
@@ -1069,6 +1079,12 @@
               }
             }
           },
+          "401": {
+            "description": "Não autorizado"
+          },
+          "403": {
+            "description": "Acesso Negado"
+          },
           "422": {
             "description": "Erro de validação",
             "content": {
@@ -1137,7 +1153,9 @@
           }
         },
         "security": [
-          {}
+          {
+            "bearerAuth": []
+          }
         ]
       }
     },
